<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hogent.squads.view.login.LoginFragment"
        android:id="@+id/login_scroll_view">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

        <ImageView
            android:id="@+id/squads_logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_squads_white"
            android:contentDescription="Squads logo"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/login_text"
                android:textAppearance="@style/TextAppearance.Squads.SubTitle"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Squads.TextInputLayout"
                android:id="@+id/usernameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="Gebruikersnaam"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Squads.TextInputLayout"
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="Wachtwoord"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Widget.Squads.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Inloggen"
                app:shapeAppearance="@style/Widget.Squads.Button" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
