<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_graph_calendar">

    <include app:graph="@navigation/nav_graph_calendar"/>
    <include app:graph="@navigation/nav_graph_user_home"/>
    <include app:graph="@navigation/nav_graph_stats"/>

    <activity
            android:id="@+id/mainActivity"
            android:name="com.hogent.squads.view.MainActivity"
            android:label="MainActivity"/>

    <fragment
            android:id="@+id/loginFragment"
            android:name="com.hogent.squads.view.login.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login"/>



<!--    Global actions-->
    <action
        android:id="@+id/action_global_nav_graph_calendar"
        app:destination="@id/nav_graph_calendar" />
    <action
        android:id="@+id/action_global_nav_graph_home"
        app:destination="@id/nav_graph_home" />
    <action
        android:id="@+id/action_global_nav_graph_stats"
        app:destination="@id/nav_graph_stats" />

</navigation>
